# cetus

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  go.mod  main.go
scripts/: split-schema.awk
web/: README.md  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web/apps/web/: components.json  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
web/apps/web/src/: index.css  router.tsx
web/apps/web/src/components/: header.tsx  sign-in-form.tsx  sign-up-form.tsx  user-menu.tsx
web/apps/web/src/functions/: get-user.ts
web/apps/web/src/lib/: auth-client.ts
web/apps/web/src/middleware/: auth.ts
web/apps/web/src/routes/: __root.tsx  _authed.tsx  index.tsx
web/apps/web/src/routes/_authed/: dashboard.index.tsx
web/apps/web/src/routes/api/auth/: $.ts
