load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:exclude .claude

gazelle(name = "gazelle")

go_library(
    name = "cetus_lib",
    srcs = ["main.go"],
    importpath = "cetus",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cetus_linux_amd64",
    out = "bin/cetus",
    embed = [":cetus_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cetus_linux_arm64",
    out = "bin/cetus",
    embed = [":cetus_lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:private"],
)

pkg_tar(
    name = "cetus_tar",
    srcs = select({
        "@platforms//cpu:arm64": [":cetus_linux_arm64"],
        "@platforms//cpu:x86_64": [":cetus_linux_amd64"],
        "//conditions:default": [":cetus_linux_amd64"],
    }),
    package_dir = "/",
    strip_prefix = "bin",
)
